--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-header/schedule-details-header.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-header/schedule-details-header.component.html
@@ -8,7 +8,7 @@
     <button mat-menu-item *ngIf="product && product.id" [routerLink]="['/products', product.id]">View Product</button>
     <button mat-menu-item *ngIf="productSchedule && productSchedule.id" [routerLink]="['/productschedules', productSchedule.id]">View Product Schedule</button>
     <button mat-menu-item *ngIf="schedule && schedule.product && schedule.product.id" [routerLink]="['/products', schedule.product.id]">View Product</button>
-    <button mat-menu-item *ngIf="schedule" (click)="removeSchedule.emit(true)">Remove Schedule from Session</button>
-    <button mat-menu-item *ngIf="productSchedule" (click)="removeProductSchedule.emit(true)">Remove Product Schedule from Session</button>
+    <button mat-menu-item *ngIf="editable && schedule" (click)="removeSchedule.emit(true)">Remove Schedule from Session</button>
+    <button mat-menu-item *ngIf="editable && productSchedule" (click)="removeProductSchedule.emit(true)">Remove Product Schedule from Session</button>
   </mat-menu>
 </div>
