--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
@@ -5,6 +5,7 @@
       [product]="_product"
       [schedule]="_scheduleBackup"
       [productSchedule]="_productSchedule"
+      [editable]="editable"
       (close)="closeModal()"
       (removeSchedule)="removeSchedule()"
       (removeProductSchedule)="removeProductSchedule()">
@@ -25,11 +26,11 @@
           <div class="body">
             <div class="body__row">
               <mat-form-field>
-                <input type="text" auto-focus matInput placeholder="Start" (keydown)="isNumeric($event)" [(ngModel)]="_scheduleBackup.start">
+                <input type="text" [disabled]="!editable" auto-focus matInput placeholder="Start" (keydown)="isNumeric($event)" [(ngModel)]="_scheduleBackup.start">
               </mat-form-field>
 
               <mat-form-field>
-                <input type="text" matInput placeholder="End" (keydown)="isNumeric($event)" [(ngModel)]="_scheduleBackup.end">
+                <input type="text" [disabled]="!editable" matInput placeholder="End" (keydown)="isNumeric($event)" [(ngModel)]="_scheduleBackup.end">
               </mat-form-field>
             </div>
 
@@ -41,20 +42,34 @@
                 [applyAutofocus]="false"
                 [placeholder]="'Product'"
                 [mapFunction]="productMapper"
+                [disabled]="!editable"
                 (selected)="_scheduleBackup.product = $event">
               </autocomplete-input>
             </div>
 
             <div class="radio-buttons">
 
-              <mat-radio-button class="radio-blue" (click)="setCycleNoRepeat()" [checked]="+_scheduleBackup.period === 0 && !_scheduleBackup.sameDayOfMonth">No cycle repeat</mat-radio-button>
+              <mat-radio-button [disabled]="!editable"
+                                class="radio-blue"
+                                (click)="setCycleNoRepeat()"
+                                [checked]="+_scheduleBackup.period === 0 && !_scheduleBackup.sameDayOfMonth">
+                No cycle repeat
+              </mat-radio-button>
 
-              <mat-radio-button class="radio-blue" (click)="setCycleSameDay()" [checked]="_scheduleBackup.sameDayOfMonth">Repeat cycle same day each month</mat-radio-button>
+              <mat-radio-button class="radio-blue"
+                                [disabled]="!editable"
+                                (click)="setCycleSameDay()"
+                                [checked]="_scheduleBackup.sameDayOfMonth">
+                Repeat cycle same day each month
+              </mat-radio-button>
 
-              <mat-radio-button class="radio-blue" (click)="setCycleRepeatEvery()" [checked]="+_scheduleBackup.period > 0 && !_scheduleBackup.sameDayOfMonth">
+              <mat-radio-button class="radio-blue"
+                                [disabled]="!editable"
+                                (click)="setCycleRepeatEvery()"
+                                [checked]="+_scheduleBackup.period > 0 && !_scheduleBackup.sameDayOfMonth">
                 Repeat cycle every
                 <mat-form-field class="cycle-input">
-                  <input type="text" matInput (keydown)="isNumeric($event)" [(ngModel)]="_scheduleBackup.period">
+                  <input type="text" [disabled]="!editable" matInput (keydown)="isNumeric($event)" [(ngModel)]="_scheduleBackup.period">
                 </mat-form-field>
                 Days
               </mat-radio-button>
@@ -67,12 +82,12 @@
           <div class="body">
             <div class="body__row">
               <mat-form-field>
-                <input type="text" matInput placeholder="Price" currencyInput [initPrice]="_scheduleBackup.price" (priceChanged)="_scheduleBackup.price = $event">
+                <input type="text" matInput [disabled]="!editable" placeholder="Price" currencyInput [initPrice]="_scheduleBackup.price" (priceChanged)="_scheduleBackup.price = $event">
               </mat-form-field>
             </div>
           </div>
 
-          <div class="buttons"><div (click)="saveSchedule()">SAVE</div></div>
+          <div *ngIf="editable" class="buttons"><div (click)="saveSchedule()">SAVE</div></div>
         </div>
 
         <div *ngIf="_productSchedule" class="schedule-container__schedule-details">
@@ -95,7 +110,7 @@
           <div class="body">
             <div class="body__row">
               <mat-form-field>
-                <input type="text" matInput placeholder="Quantity" [(ngModel)]="_productSchedule.quantity">
+                <input type="text" [disabled]="!editable" matInput placeholder="Quantity" [(ngModel)]="_productSchedule.quantity">
               </mat-form-field>
 
               <mat-form-field>
@@ -104,7 +119,7 @@
             </div>
           </div>
 
-          <div class="buttons"><div (click)="saveProductSchedule()">SAVE</div></div>
+          <div *ngIf="editable" class="buttons"><div (click)="saveProductSchedule()">SAVE</div></div>
         </div>
 
         <div *ngIf="_product" class="schedule-container__schedule-details">
@@ -136,12 +151,12 @@
             <mat-icon [matMenuTriggerFor]="scheduleoptions">more_vert</mat-icon>
             <mat-menu #scheduleoptions="matMenu" x-position="before">
               <button mat-menu-item [routerLink]="['/products', s.product.id]">View Product</button>
-              <button mat-menu-item (click)="deleteSchedule.emit(s)">Delete Schedule</button>
+              <button *ngIf="editable" mat-menu-item (click)="deleteSchedule.emit(s)">Delete Schedule</button>
               <button mat-menu-item (click)="focusSchedule.emit(s)">Focus Schedule</button>
             </mat-menu>
           </div>
 
-          <div class="item item--last">
+          <div *ngIf="editable" class="item item--last">
             <autocomplete-input
               class="session-autocomplete"
               [initialValue]="productToAdd"
