Redesign registration flow

--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -17,8 +17,8 @@
     box-sizing: border-box;
     border-radius: 50%;
     border: 3px solid rgba(255, 255, 255, 0.3);
-    height: 22px;
-    width: 22px;
+    height: 20px;
+    width: 20px;
 
     div {
       top: 24px;
@@ -27,20 +27,20 @@
       transform: translateX(-50%);
       position: absolute;
       font-family: 'Roboto', serif;
-      color: rgba(255, 255, 255, 0.4);
+      color: #FFFFFF;
       font-weight: 500;
     }
   }
 
   .line {
-    width: 46px;
+    width: 48px;
     height: 4px;
     background: rgba(255, 255, 255, 0.3);
   }
 
   .active {
-    background: rgba(255, 255, 255, 0.3);
-    border-color: rgba(255, 255, 255, 0);
+    background: #FFFFFF;
+    border-color: #FFFFFF;
   }
 
   .finished {
