--- a/src/app/payment/payment/payment.component.html
+++ b/src/app/payment/payment/payment.component.html
@@ -17,12 +17,17 @@
   <div class="progress">
     <div class="circle finished"></div>
     <div class="line finished"></div>
-    <div class="circle" [class.active]="planInProgress" [class.finished]="paymentInProgress">
+    <div class="circle" [class.active]="planInProgress" [class.finished]="paymentInProgress || confirmationInProgress">
       <div *ngIf="planInProgress">{{'REGISTER_PROGRESS_PLAN' | translate}}</div>
     </div>
-    <div class="line" [class.finished]="paymentInProgress"></div>
-    <div class="circle" [class.active]="paymentInProgress">
-      <div *ngIf="paymentInProgress">{{'REGISTER_PROGRESS_PAYMENT' | translate}}</div>
+    <div class="line" [class.finished]="paymentInProgress || confirmationInProgress"></div>
+    <div class="circle" [class.active]="paymentInProgress" [class.finished]="confirmationInProgress">
+      <div *ngIf="paymentInProgress">{{'Billing' | translate}}</div>
+    </div>
+
+    <div class="line" [class.finished]="confirmationInProgress"></div>
+    <div class="circle" [class.active]="confirmationInProgress">
+      <div *ngIf="confirmationInProgress">{{'REGISTER_PROGRESS_PAYMENT' | translate}}</div>
     </div>
   </div>
 
@@ -31,13 +36,20 @@
   </div>
 
   <div *ngIf="paymentInProgress" class="container">
+    <plan-billing
+      (changePlan)="setPlanInProgress()"
+      (creditCardSelected)="setCreditCard($event)"
+      [creditCard]="creditCard"
+      [plan]="plan">
+    </plan-billing>
+  </div>
+
+  <div *ngIf="confirmationInProgress" class="container">
     <plan-payment
-      (changePlan)="changePlanEmitted()"
-      (paymentSuccessful)="accountPaymentFinished()"
+      [creditCard]="creditCard"
       [plan]="plan"
-      [isRecurringPayment]="isRecurringPayment"
-      [creditCards]="creditCards"
-      [unpaidBills]="unpaidBills">
+      (changePlan)="setPlanInProgress()"
+      (changeCreditCard)="setPaymentInProgress()">
     </plan-payment>
   </div>
 
