--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -21,6 +21,8 @@
     <div class="circle"></div>
     <div class="line"></div>
     <div class="circle"></div>
+    <div class="line"></div>
+    <div class="circle"></div>
   </div>
 
   <div class="registration-form" [class.group]="showProgress">
